--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-md-6">
           <img
             src="https://31ukq.codesandbox.io/images/yoga.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
@@ -100,7 +100,7 @@
         <div class="col-md-6">
           <img
             src="https://31ukq.codesandbox.io/images/weather.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
@@ -108,7 +108,7 @@
         <div class="col-md-6">
           <img
             src="https://31ukq.codesandbox.io/images/yogurt.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
 
