--- a/about.html
+++ b/about.html
@@ -16,14 +16,15 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <title>About Karolina</title>
+    <title>About me - Karolina</title>
+    <meta name="description" content="About Karolina, a front-end developer based in Europe">
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Karolina</a>
+        <a class="navbar-brand" href="/" title="Homepage">Karolina</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,6 +42,7 @@
               <a
                 class="nav-link"
                 href="https://kzvxyz.csb.app/index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
@@ -49,6 +51,7 @@
               class="nav-link active" 
               aria-current="page"
               href="#"
+              title="About Karolina"
                 >About me</a
               >
             </li>
@@ -56,6 +59,7 @@
               <a
                 class="nav-link"
                 href="https://kzvxyz.csb.app/about.html#contact"
+                title="Contact Karolina"
                 >Contact me</a
               >
             </li>
