--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Karolina</a>
+        <a class="navbar-brand" href="#" title="Homepage">Karolina</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,10 +38,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="#"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://kzvxyz.csb.app/about.html"
+              <a
+                class="nav-link"
+                href="https://kzvxyz.csb.app/about.html"
+                title="About Karolina"
                 >About me</a
               >
             </li>
@@ -49,6 +58,7 @@
               <a
                 class="nav-link"
                 href="https://kzvxyz.csb.app/about.html#contact"
+                title="Contact Karolina"
                 >Contact me</a
               >
             </li>
@@ -60,8 +70,12 @@
     <h1 class="text-center">Karolina</h1>
     <h3 class="text-center">🇵🇱 Front-end developer, based in Europe</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact Karolina"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About Karolina"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
@@ -80,7 +94,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch yoga app</a>
+            <a href="#" class="primary-link" title="Yoga project"
+              >Launch yoga app</a
+            >
           </div>
         </div>
       </div>
@@ -94,7 +110,9 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch weather app</a>
+            <a href="#" class="primary-link" title="Weather project"
+              >Launch weather app</a
+            >
           </div>
         </div>
         <div class="col-md-6">
