--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       crossorigin="anonymous"
     ></script>
     <title>Karolina</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#" title="Homepage">Karolina</a>
+        <a class="navbar-brand" href="/" title="Homepage">Karolina</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,23 +41,20 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="#"
+                href="/"
                 title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="https://kzvxyz.csb.app/about.html"
-                title="About Karolina"
+              <a class="nav-link" href="/about.html" title="About Karolina"
                 >About me</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://kzvxyz.csb.app/about.html#contact"
+                href="/about.html#contact"
                 title="Contact Karolina"
                 >Contact me</a
               >
@@ -70,10 +67,13 @@
     <h1 class="text-center">Karolina</h1>
     <h3 class="text-center">🇵🇱 Front-end developer, based in Europe</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link" title="Contact Karolina"
+      <a
+        href="/about.html#contact"
+        class="contact-link"
+        title="Contact Karolina"
         >Contact me</a
       >
-      <a href="about.html" class="about-link" title="About Karolina"
+      <a href="/about.html" class="about-link" title="About Karolina"
         >About me</a
       >
     </div>
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-md-6">
           <img
-            src="https://31ukq.codesandbox.io/images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
@@ -117,7 +117,7 @@
         </div>
         <div class="col-md-6">
           <img
-            src="https://31ukq.codesandbox.io/images/weather.png"
+            src="/images/weather.png"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
@@ -125,7 +125,7 @@
       <div class="row mt-5">
         <div class="col-md-6">
           <img
-            src="https://31ukq.codesandbox.io/images/yogurt.png"
+            src="/images/yogurt.png"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
