--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <title>About me - Karolina</title>
     <meta name="description" content="About Karolina, a front-end developer based in Europe">
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -41,7 +41,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://kzvxyz.csb.app/index.html"
+                href="/"
                 title="Homepage"
                 >Home</a
               >
@@ -50,7 +50,7 @@
               <a 
               class="nav-link active" 
               aria-current="page"
-              href="#"
+              href="/about.html"
               title="About Karolina"
                 >About me</a
               >
@@ -58,7 +58,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://kzvxyz.csb.app/about.html#contact"
+                href="/about.html#contact"
                 title="Contact Karolina"
                 >Contact me</a
               >
@@ -81,13 +81,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="https://31ukq.codesandbox.io/images/yoga.png" class="img-fluid p-2 shadow rounded">
+          <img src="/images/yoga.png" class="img-fluid p-2 shadow rounded">
         </div>
         <div class="col-sm-4">
-          <img src="https://31ukq.codesandbox.io/images/weather.png" class="img-fluid p-2 shadow rounded">
+          <img src="/images/weather.png" class="img-fluid p-2 shadow rounded">
         </div>
         <div class="col-sm-4">
-          <img src="https://31ukq.codesandbox.io/images/yogurt.png" class="img-fluid p-2 shadow rounded">
+          <img src="/images/yogurt.png" class="img-fluid p-2 shadow rounded">
         </div>
     </div>
     <div id="contact" class="mt-5">
